# Learning

./: .gitignore
ASM/: add42.asm  args  argtest  argtest.asm  asm64  ex10  ex4  ex5  ex8.asm  example.asm  file.txt  hello  hello.asm  linux64.inc.asm  myAsmHelloWorld  test  test.txt  what.asm
ASM/MySource/: MULandDIV.asm  RORandRCR.asm  StackOparations.asm  addsyb.asm  array2dimensionAndMax.asm  convertBinaryToDecimal.asm  exercise.asm  find.asm  findLetter.asm  fromUpercaseToLowercase.asm  indirectIndexdBased.asm  inputData.asm  libraries.asm  lowerToUpper.asm  macros.asm  max.asm  mov2.asm  upperToLower .asm  usageEmu8086.asm
Arduino/Akcelerometr/: Akcelerometr.ino
Arduino/Akcelerometr-Calibracja/: Akcelerometr-Calibracja.ino
Arduino/DigitalWrite_and_PORTB/: DigitalWrite_and_PORTB.ino
Arduino/MPU6050_2/: MPU6050_2.ino
Arduino/Silnik/: Silnik.ino.with_bootloader.standard.hex
Bash/: program.sh  test.txt
C++/: CMakeLists.txt  currency.cpp  fizzbuzz.cpp  palindrome.cpp  rock_paper_scissors.cpp
C++/C_ASM_Criterion/: .project  CMakeLists.txt  WARZNE.txt  my_strlen.asm  sum.asm  test  tests.c
GO/: ping-sweep-raw
HTML-CSS/: HTML
LUA/: solution.lua  tests.lua
Learning-ASM/: .vimrc  arg.asm  calc  calc.asm  ex1  ex1.asm  ex11  ex3  ex3.asm  ex4.asm  ex5.asm  ex6  ex6.asm  ex7  ex7.asm  ex8  example  example.lst  myAsmHelloWorld.asm  run  test.asm  what_my
Learning-C++/: magic-8-ball.cpp  quadratic.cpp  whale.cpp
Learning-GO/: hello.go
Learning-HTML-CSS/: teset.html
Learning-LUA/: spec.lua
ML/: movie_list.p
Qt/: helloWorld.qml
(+2735 files in other folders)
